Nuova versione del modello intermedio, che include anche le misure di dependability. Nuova versione del modello IDM per la review.

--- a/workspace/it.unifi.rcl.transformations.idm.edit/plugin.properties
+++ b/workspace/it.unifi.rcl.transformations.idm.edit/plugin.properties
@@ -180,3 +180,20 @@ _UI_FailureConsequences_Critical_literal = Critical
 _UI_FailureConsequences_Catastrophic_literal = Catastrophic
 _UI_FailureConsistency_Consistent_literal = Consistent
 _UI_FailureConsistency_Inconsistent_literal = Inconsistent
+_UI_DependabilityMeasure_type = Dependability Measure
+_UI_EvaluationType_type = Evaluation Type
+_UI_SteadyState_type = Steady State
+_UI_InstantOfTime_type = Instant Of Time
+_UI_IntervalOfTime_type = Interval Of Time
+_UI_DependabilityMeasure_target_feature = Target
+_UI_DependabilityMeasure_evaluations_feature = Evaluations
+_UI_DependabilityMeasure_requiredMax_feature = Required Max
+_UI_DependabilityMeasure_requiredMin_feature = Required Min
+_UI_InstantOfTime_timePoint_feature = Time Point
+_UI_IntervalOfTime_begin_feature = Begin
+_UI_IntervalOfTime_end_feature = End
+_UI_Sistema_measures_feature = Measures
+_UI_Reliability_type = Reliability
+_UI_Availability_type = Availability
+_UI_Safety_type = Safety
+_UI_Safety_hazardousLevel_feature = Hazardous Level
