updated build properties of all plugins
git-svn-id: http://gfconsulting.pisa.intecs.it/svn/chess/trunk/extra-polarsys/org.chess.statebased@224 1bcbb503-4bc2-4150-8f37-50d8ece30c9f

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                metamodels/,\
                transformations/,\
-               bin/,\
-               ATL/,\
-               build.properties
+               build.properties,\
+               ATL/
