--- a/plugins/org.polarsys.chess.chessmlprofile/plugin.xml
+++ b/plugins/org.polarsys.chess.chessmlprofile/plugin.xml
@@ -555,38 +555,9 @@
    <extension point="org.eclipse.emf.ecore.generated_package">
       <!-- @generated CHESS -->
       <package
-            uri="http://CHESS/SystemModel/STS"
-            class="org.polarsys.chess.chessmlprofile.SystemModel.STS.STSPackage"
+            uri="http://CHESS/SystemModel"
+            class="org.polarsys.chess.chessmlprofile.SystemModel.SystemModelPackage"
             genModel="model/CHESS.genmodel"/>
-   </extension>
-
-   <extension point="org.eclipse.emf.ecore.extension_parser">
-      <!-- @generated CHESS -->
-      <parser
-            type="sts"
-            class="org.polarsys.chess.chessmlprofile.SystemModel.STS.util.STSResourceFactoryImpl"/>
-   </extension>
-   
-   <extension
-         point="org.eclipse.uml2.uml.generated_package">
-      <profile
-            location="pathmap://CHESSML_PROFILE/CHESS.profile.uml#_feeMkE-xEeSSpZfBcdLcOA"
-            uri="http://CHESS/SystemModel/STS">
-      </profile>
-   </extension> 
-
-   <extension
-         point="org.eclipse.uml2.uml.generated_package">
-      <profile
-            location="pathmap://CHESSML_PROFILE/CHESS.profile.uml#_E0IGIE-LEeS_UtY6QqQNMg"
-            uri="http://CHESS/SystemModel">
-      </profile>
-   </extension> 
-
-   <extension point="org.eclipse.emf.ecore.extension_parser">
-      <parser
-            type="componentmodel"
-            class="org.polarsys.chess.chessmlprofile.ComponentModel.util.ComponentModelResourceFactoryImpl"/>
    </extension>
    
    <extension
