--- a/plugins/org.polarsys.chess.chessmlprofile/plugin.xml
+++ b/plugins/org.polarsys.chess.chessmlprofile/plugin.xml
@@ -551,6 +551,29 @@
             type="componentmodel"
             class="org.polarsys.chess.chessmlprofile.ComponentModel.util.ComponentModelResourceFactoryImpl"/>
    </extension>
+
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated CHESS -->
+      <package
+            uri="http://CHESS/SystemModel/STS"
+            class="org.polarsys.chess.chessmlprofile.SystemModel.STS.STSPackage"
+            genModel="model/CHESS.genmodel"/>
+   </extension>
+   <extension
+         point="org.eclipse.uml2.uml.generated_package">
+      <profile
+            location="pathmap://CHESSML_PROFILE/CHESS.profile.uml#_-aQIUKbREeSHP5PnCeTneg"
+            uri="http://CHESS/SystemModel/STS">
+      </profile>
+   </extension> 
+    <extension point="org.eclipse.emf.ecore.extension_parser">
+      <!-- @generated CHESS -->
+      <parser
+            type="sts"
+            class="org.polarsys.chess.chessmlprofile.SystemModel.STS.util.STSResourceFactoryImpl"/>
+   </extension>
+   
+   
    
    <extension
          point="org.eclipse.uml2.uml.generated_package">
