Add "Incubation" to Bundle-Names, as required by Eclipse process

--- a/plugins/org.polarsys.chess.discovery/plugin.properties
+++ b/plugins/org.polarsys.chess.discovery/plugin.properties
@@ -1,2 +1,2 @@
-pluginName = CHESS Discovery UI Contributions
+pluginName = CHESS Discovery UI Contributions plug-in (Incubation)
 providerName = University of Padova
