--- a/plugins/org.polarsys.chess.wizards/plugin.properties
+++ b/plugins/org.polarsys.chess.wizards/plugin.properties
@@ -8,6 +8,6 @@
 # Contributors:
 #     Obeo - initial API and implementation
 ###############################################################################
-pluginName=Papyrus Wizards (Incubation)
+pluginName=CHESS Papyrus Wizards (Incubation)
 pluginProvider=Eclipse Modeling Project
 NewWizards.project.description=Create a project for a new Papyrus model (UML or SysML)
