--- a/plugins/org.polarsys.chess.service/plugin.xml
+++ b/plugins/org.polarsys.chess.service/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.services">
       <sourceProvider
-            provider="org.polarsys.chess.service.commands.SwitchSourceProvider">
+            provider="org.polarsys.chess.service.internal.commands.switchers.SwitchSourceProvider">
          <variable
                name="org.polarsys.chess.service.commands.switchState"
                priorityLevel="workbench">
@@ -14,9 +14,9 @@
    <extension
          point="org.eclipse.papyrus.infra.core.service">
       <serviceFactory
-            classname="org.polarsys.chess.service.CHESSServiceFactory"
-            description="The service loading CHESS editor support"
-            id="org.polarsys.chess.service.CHESSService"
+            classname="org.polarsys.chess.service.internal.service.CHESSServiceFactory"
+            description="The service loading the CHESS editor support"
+            id="org.polarsys.chess.service.internal.service.CHESSService"
             priority="1"
             startKind="startup">
             <dependsOn
@@ -63,7 +63,7 @@
       </category>
       <command
             categoryId="org.polarsys.chess.commands.category"
-            defaultHandler="org.polarsys.chess.service.commands.CurrentViewStatus"
+            defaultHandler="org.polarsys.chess.service.internal.commands.CurrentViewStatusCommand"
             description="Shows the active design view"
             id="org.polarsys.chess.service.CurrentViewStatus"
             name="CurrentView">
@@ -319,7 +319,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.polarsys.chess.service.commands.SwitchToExtraFunctional"
+            class="org.polarsys.chess.service.internal.commands.switchers.SwitchToExtraFunctionalCommand"
             commandId="org.polarsys.chess.service.switchEFCommand">
          <enabledWhen>
             <with
@@ -339,7 +339,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.polarsys.chess.service.commands.SwitchToRailway"
+            class="org.polarsys.chess.service.internal.commands.switchers.SwitchToRailwayCommand"
             commandId="org.polarsys.chess.service.switchRailCommand">
          <enabledWhen>
             <with
@@ -359,7 +359,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="org.polarsys.chess.service.commands.SwitchToDependability"
+            class="org.polarsys.chess.service.internal.commands.switchers.SwitchToDependabilityCommand"
             commandId="org.polarsys.chess.service.switchDEPCommand">
          <enabledWhen>
             <with
@@ -380,7 +380,7 @@
          point="org.polarsys.chess.selectionListener">
       <listener
             name="selection listener"
-            realization="org.polarsys.chess.service.SelectionListener">
+            realization="org.polarsys.chess.service.internal.service.SelectionListener">
       </listener>
    </extension>
    <extension
@@ -392,7 +392,7 @@
       </category>
       <command
             categoryId="org.polarsys.chess.categoryDebug"
-            defaultHandler="org.polarsys.chess.service.commands.SupersuserToggleCommand"
+            defaultHandler="org.polarsys.chess.service.internal.commands.SupersuserToggleCommand"
             id="org.polarsys.chess.command.superuser"
             name="disable the checking of read/write permissions">
       </command>
