Change plugins "Vendor" to "Polarsys CHESS Project"
Signed-off-by: Stefano Puri <stefano.puri@intecs.it>

--- a/plugins/org.polarsys.chess.chessmlprofile/plugin.properties
+++ b/plugins/org.polarsys.chess.chessmlprofile/plugin.properties
@@ -17,5 +17,5 @@
 #
 # $Id$
 
-pluginName = MARTE Model
-providerName = www.example.org
+pluginName = CHESS ML profile plug-in (Incubation)
+providerName = Polarsys CHESS Project
