--- a/plugins/org.polarsys.chess.wizards/plugin.properties
+++ b/plugins/org.polarsys.chess.wizards/plugin.properties
@@ -9,5 +9,5 @@
 #     Obeo - initial API and implementation
 ###############################################################################
 pluginName=CHESS Papyrus Wizards (Incubation)
-pluginProvider=Eclipse Modeling Project
-NewWizards.project.description=Create a project for a new Papyrus model (UML or SysML)
+pluginProvider=Polarsys CHESS Project
+NewWizards.project.description=Create a project for a new CHESS model (UML or SysML)
