initial update of plugind for Eclipse Mars release

--- a/plugins/org.polarsys.chess.chessmlprofile/build.properties
+++ b/plugins/org.polarsys.chess.chessmlprofile/build.properties
@@ -17,16 +17,12 @@ bin.includes = .,\
                plugin.xml,\
                plugin.properties,\
                icons/,\
-               library/,\
-               readme.txt,\
                build.properties,\
                palettes/,\
-               doc/,\
                .classpath
 jars.compile.order = .
 source.. = src/
 output.. = bin/
 src.includes = icons/,\
-               library/,\
-               model/,\
-               readme.txt
+               model/
+
