remove deprecated "build instance command" from the CHESS menu

--- a/plugins/org.polarsys.chess.commands/plugin.xml
+++ b/plugins/org.polarsys.chess.commands/plugin.xml
@@ -6,10 +6,6 @@
         id="Build Instance Command"
         point="org.eclipse.ui.commands">
       <command
-            id="org.chess.BuildInstanceCommandID"
-            name="buildInstanceCommand">
-      </command>
-      <command
             id="org.chess.BuildModelInstanceCommandID"
             name="buildModelInstanceCommand">
       </command>
@@ -97,46 +93,12 @@
             allPopups="false"
             locationURI="menu:org.eclipse.ui.main.menu">
          <menu
-               id="org.polarsys.chess.mainMenu"
-               label="CHESS"
-               mnemonic="E">
-            <command
-                  commandId="org.chess.BuildInstanceCommandID"
-                  label="Build Instances"
-                  style="push">
-               <visibleWhen
-                     checkEnabled="false">
-                  <or>
-                     <with
-                           variable="activeEditorId">
-                        <equals
-                              value="org.eclipse.uml2.uml.editor.presentation.UMLEditorID">
-                        </equals>
-                     </with>
-                     <with
-                           variable="activeEditorInput">
-                        <adapt
-                              type="org.eclipse.core.resources.IResource">
-                           <test
-                                 property="org.eclipse.core.resources.projectNature"
-                                 value="org.polarsys.chess.CHESSNature">
-                           </test>
-                        </adapt>
-                     </with>
-                  </or>
-               </visibleWhen>
-            </command>
-         </menu>
-      </menuContribution>
-      <menuContribution
-            allPopups="false"
-            locationURI="menu:org.eclipse.ui.main.menu">
-         <menu
+               icon="resources/CHESSicon.gif"
                id="org.polarsys.chess.mainMenu"
                label="CHESS">
             <command
                   commandId="org.chess.BuildModelInstanceCommandID"
-                  label="Build Instances from Model"
+                  label="Build Instances Model"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -256,10 +218,6 @@
 
    <extension
          point="org.eclipse.ui.handlers">
-      <handler
-            class="org.polarsys.chess.commands.BuildInstanceCommand"
-            commandId="org.chess.BuildInstanceCommandID">
-      </handler>
       
       <handler
             class="org.polarsys.chess.commands.BuildModelInstanceCommand"
